--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,6 @@
 [AUTH]
-USERNAME=MuriloHeydeAdvogado
-PASSWORD=19022021
+USERNAME=xxxxx
+PASSWORD=xxxx
 
 [INSTRUCTIONS]
 URLS=["https://www.instagram.com/explore/locations/108212225873404/kolkata/",
